--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "webpack": "^1.12.14"
   }
 }
