--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +23,9 @@
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "webpack": "^1.12.14"
+  },
+  "engines": {
+  "node": "5.6.0",
+  "npm": "3.6.0"
   }
 }
