--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack": "^1.12.14"
   },
   "engines": {
-  "node": "5.6.0",
-  "npm": "3.6.0"
+  "node": "4.1.1",
+  "npm": "2.1.x"
   }
 }
