--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "flux": "^2.1.1",
     "react": "^0.14.7",
@@ -25,7 +26,7 @@
     "webpack": "^1.12.14"
   },
   "engines": {
-  "node": "4.1.1",
-  "npm": "2.1.x"
+    "node": "4.1.1",
+    "npm": "2.1.x"
   }
 }
