--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "flux": "^2.1.1",
+    "modal": "^1.2.0",
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
